fix close button image not showing

--- a/css/app.css
+++ b/css/app.css
@@ -453,7 +453,7 @@ input.disabled[type=submit]:hover, .disabled.button.outlined:hover {
 .close-button {
   display: inline-block;
   border: none;
-  background: url("img/close-button.svg") no-repeat center center;
+  background: url("/img/close-button.svg") no-repeat center center;
   cursor: pointer;
   width: 1.5em;
   height: 1.5em;
